--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,400;1,500;1,600;1,700;1,800;1,900&family=Ultra&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,400;1,500;1,600;1,700;1,800;1,900&family=Tapestry&family=Ultra&display=swap');
 *{
     box-sizing: border-box;
     margin: 0;
@@ -59,4 +59,14 @@ margin-top: 5px;
  position: absolute;
  bottom: 300px;
  left: 100px;
+}
+.header .hero-text h4{
+    font-size: 100px;
+    color: #996515;
+    font-family:'tapestry';
+}
+.header .hero-text p{
+    font-size: 20px;
+    
+ color: #fff;
 }
