--- a/style.css
+++ b/style.css
@@ -73,3 +73,17 @@ margin-top: 5px;
  color: #fff;
  font-family: 'Montserrat';
 }
+.purchase{
+   display: flex;
+   font-family: 'Montserrat';
+    width: 100%;
+    height: 100vh;
+    background: gray;
+}
+.purchase .factor{
+    margin: 20px;
+    height: 500px;
+    width: 1100px;
+    background: #fff;
+    
+}
