--- a/style.css
+++ b/style.css
@@ -78,12 +78,25 @@ margin-top: 5px;
    font-family: 'Montserrat';
     width: 100%;
     height: 100vh;
-    background: gray;
+    background: #f2f2f2;
+    padding: 50px 0;
 }
 .purchase .factor{
     margin: 20px;
     height: 500px;
     width: 1100px;
     background: #fff;
+    text-align: center;
+    padding: 20px 0;
+    box-shadow: 10px 10px 10px 3px;
     
+}
+.purchase .factor i{
+    font-size: 50px;
+}
+.purchase .factor h5{
+    font-size: 20px;
+    text-transform: uppercase;
+    color: #996515;
+    margin: 20px 0;
 }
