--- a/style.css
+++ b/style.css
@@ -87,13 +87,22 @@ margin-top: 5px;
     width: 1100px;
     background: #fff;
     text-align: center;
-    padding: 20px 0;
-    box-shadow: 10px 10px 10px 3px;
+    padding: 20px;
+    box-shadow: 5px 10px 8px #888;
     
 }
 .purchase .factor i{
     font-size: 50px;
 }
+/***add colors to the font awesome if you want to*****/
+/*.purchase .factor .fa-map-location-dot{
+}
+.purchase .factor .fa-money-bill-1-wave{
+    color: green;
+}
+.purchase .factor .fa-wifi{
+}
+*/
 .purchase .factor h5{
     font-size: 20px;
     text-transform: uppercase;
