--- a/style.css
+++ b/style.css
@@ -89,6 +89,8 @@ margin-top: 5px;
  position: absolute;
  left: 50%;
  top: 30px;
+ font-family: 'Ultra';
+ font-weight: 500;
 
 }
 .purchase h2::before{
@@ -98,7 +100,7 @@ margin-top: 5px;
     width: 50px;
     height: 5px;
     position: absolute;
-    transform: translate(-60px, 12px);
+    transform: translate(-60px, 13px);
 
 }
 .purchase h2::after{
@@ -108,7 +110,7 @@ margin-top: 5px;
     width: 50px;
     height: 5px;
     position: absolute;
-    transform: translate(110px, -17px);
+    transform: translate(125px, -17px);
 
 }
 .purchase .factor{
@@ -140,3 +142,21 @@ margin-top: 5px;
     margin: 20px 0;
 }
 /***********HOUSE SALE SECTION***************/
+.for-sale{
+    display: flex;
+    font-family: 'Montserrat';
+     width: 100%;
+     height: 100vh;
+     background: gray;
+     padding: 70px 0;
+     position: relative;
+}
+.for-sale .house-image{
+    margin: 20px;
+   
+    width: 1100px;
+    background: #fff;
+    text-align: center;
+    padding: 20px;
+    box-shadow: 5px 10px 8px #888;
+}
