--- a/style.css
+++ b/style.css
@@ -147,16 +147,42 @@ margin-top: 5px;
     font-family: 'Montserrat';
      width: 100%;
      height: 100vh;
-     background: gray;
      padding: 70px 0;
      position: relative;
 }
 .for-sale .house-image{
     margin: 20px;
-   
     width: 1100px;
+    /*height: 190px;*/
     background: #fff;
     text-align: center;
     padding: 20px;
     box-shadow: 5px 10px 8px #888;
+    position: relative;
+    box-shadow: 5px 10px 8px #888;
+}
+.for-sale .house-image .estate-img{
+position: relative;
+width: 250px;
+height: 120px;
+background: #000;
+border-radius: 4px;
+top: -70px;
+}
+
+.for-sale .house-image .estate-img img{
+    max-width: 100%;
+	  border-radius: 4px;
+      transition: 0.6s ease-in-out;
+}
+.for-sale .house-image .estate-img img:hover{
+    transform: scale(1.2);
+}
+.for-sale .house-image .fs-content{
+	
+}
+.for-sale .house-image .fs-content h5{
+    font-size: 20px;
+    color: #996515;
+    margin: 20px;
 }
