--- a/style.css
+++ b/style.css
@@ -150,13 +150,43 @@ margin-top: 5px;
      padding: 70px 0;
      position: relative;
 }
+
+    .for-sale h2{
+        position: absolute;
+        left: 50%;
+        top: 30px;
+        font-family: 'Ultra';
+        font-weight: 500;
+       
+       }
+       .for-sale h2::before{
+           content: '';
+           display: block;
+           background: #996515;
+           width: 50px;
+           height: 5px;
+           position: absolute;
+           transform: translate(-60px, 13px);
+       
+       }
+       .for-sale h2::after{
+           content: '';
+           display: block;
+           background: #996515;
+           width: 50px;
+           height: 5px;
+           position: absolute;
+           transform: translate(125px, -17px);
+       
+       }
+
 .for-sale .house-image{
-    margin: 20px;
+    margin: 60px 20px;
     width: 1100px;
    /*height: 190px;*/
     background: #fff;
     text-align: center;
-    padding: 20px;
+    padding: 15px 20px;
     box-shadow: 5px 10px 8px #888;
     position: relative;
     box-shadow: 5px 10px 8px #888;
