corrected hero image in css

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 .header{
     width: 100%;
     height: 100vh;
-    background-image: url(/images/siiii.jpg);
+    background-image: url(./images/siiii.jpg);
     background-size: cover;
     background-position: center;
     position: relative;
