--- a/style.css
+++ b/style.css
@@ -65,9 +65,10 @@ margin-top: 5px;
     font-size: 100px;
     color: #996515;
     font-family:'tapestry';
+    -webkit-text-stroke: 1px #0285CF;
 }
 .header .hero-text h4 span{
-    color: #fff;
+    color: #fff
 }
 .header .hero-text p{
     font-size: 20px;   
