--- a/style.css
+++ b/style.css
@@ -45,8 +45,8 @@
     transition: 0.5s;
   }
  .header nav li a:hover::after{
-width: 100%;
-margin-top: 5px;
+    width: 100%;
+    margin-top: 5px;
   }
 .header nav .user{
     border-left: 1px solid #fff;
@@ -57,9 +57,9 @@ margin-top: 5px;
     cursor: pointer;
 }
 .header .hero-text{
- position: absolute;
- bottom: 300px;
- left: 100px;
+    position: absolute;
+    bottom: 300px;
+    left: 100px;
 }
 .header .hero-text h4{
     font-size: 100px;
@@ -72,8 +72,9 @@ margin-top: 5px;
 }
 .header .hero-text p{
     font-size: 20px;   
- color: #fff;
- font-family: 'Montserrat';
+    color: #fff;
+    font-family: 'Montserrat';
+    background-color: #000;
 }
 /**************PURCHASE SECTION****************/
 .purchase{
@@ -87,11 +88,11 @@ margin-top: 5px;
   
 }
 .purchase h2{
- position: absolute;
- left: 50%;
- top: 30px;
- font-family: 'Ultra';
- font-weight: 500;
+    position: absolute;
+    left: 50%;
+    top: 30px;
+    font-family: 'Ultra';
+    font-weight: 500;
 
 }
 .purchase h2::before{
@@ -152,34 +153,33 @@ margin-top: 5px;
      position: relative;
 }
 
-    .for-sale h2{
-        position: absolute;
-        left: 50%;
-        top: 30px;
-        font-family: 'Ultra';
-        font-weight: 500;
+.for-sale h2{
+    position: absolute;
+    left: 50%;
+    top: 30px;
+    font-family: 'Ultra';
+    font-weight: 500;
        
-       }
-       .for-sale h2::before{
-           content: '';
-           display: block;
-           background: #996515;
-           width: 50px;
-           height: 5px;
-           position: absolute;
-           transform: translate(-60px, 13px);
-       
-       }
-       .for-sale h2::after{
-           content: '';
-           display: block;
-           background: #996515;
-           width: 50px;
-           height: 5px;
-           position: absolute;
-           transform: translate(125px, -17px);
-       
-       }
+}
+.for-sale h2::before{
+    content: '';
+    display: block;
+    background: #996515;
+    width: 50px;
+    height: 5px;
+    position: absolute;
+    transform: translate(-60px, 13px);    
+}
+.for-sale h2::after{
+    content: '';
+    display: block;
+    background: #996515;
+    width: 50px;
+    height: 5px;
+    position: absolute;
+    transform: translate(125px, -17px);
+      
+}
 
 .for-sale .house-image{
     margin: 60px 20px;
@@ -193,19 +193,19 @@ margin-top: 5px;
     box-shadow: 5px 10px 8px #888;
 }
 .for-sale .house-image .estate-img{
-position: relative;
-width: 250px;
-height: 120px;
-background: #000;
-border-radius: 4px;
-top: -70px;
+    position: relative;
+    width: 250px;
+    height: 120px;
+    background: #000;
+    border-radius: 4px;
+    top: -70px;
 
 }
 
 .for-sale .house-image .estate-img img{
     max-width: 100%;
-	  border-radius: 4px;
-      transition: 0.6s ease-in-out;
+	border-radius: 4px;
+    transition: 0.6s ease-in-out;
 }
 .for-sale .house-image .estate-img img:hover{
     transform: scale(1.2);
